# dnx-rs

./: Cargo.toml  README.md
.agent/workflows/: firmware-workflow.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  event.rs  main.rs  ui.rs
assets/firmware/: README.md
crates/dnx-core/: Cargo.toml
crates/dnx-core/src/: device.rs  events.rs  firmware.rs  fuph.rs  ifwi_version.rs  lib.rs  logic.rs  protocol.rs  session.rs
crates/dnx-core/src/payload/: firmware.rs  mod.rs  os.rs
crates/dnx-core/src/protocol/: ack.rs  constants.rs  header.rs  mod.rs
crates/dnx-core/src/state/: handlers.rs  machine.rs  mod.rs
crates/dnx-core/src/state/handlers/: chaabi.rs  control.rs  firmware.rs  mod.rs  os.rs  security.rs
crates/dnx-core/src/transport/: mock.rs  mod.rs  nusb.rs  traits.rs
docs/: ARCHITECTURE.md  FEATURE_PLANNING.md  IMPLEMENTATION_PLAN.md  PROTOCOL.md  ROADMAP.md
scripts/: setup_udev.sh
xtask/: Cargo.toml
xtask/src/: main.rs
